fix: content  overflow and side navbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,7 @@ body {
     transition: all 0.2s ease-in-out 0s;
     width: 230px;
     z-index: 1001;
+	overflow: hidden;
 }
 .sidebar.opened {
 	-webkit-transition: all 0.4s ease;
@@ -112,13 +113,13 @@ body {
     margin-left: 60px;
     // top: 0;
     // bottom: 0;
-    position:fixed;
+    // position:fixed;
     border-right: 1px solid #2b2b2b;
 }
-.hide-sidebar{
-    display: none;
-    transition: all 0.2s ease-in-out 0s;
-}
+// .hide-sidebar{
+//     display: none;
+//     transition: all 0.2s ease-in-out 0s;
+// }
 
 
 .sidebar-overlay {
@@ -179,9 +180,16 @@ body {
 }
 
 
+@media screen and (min-width: 767px) {
+    .sidebar-open .page-wrapper  {
+    margin-left: 60px ;
+}
+}
 @media screen and (max-width: 767px) {
-    .page-wrapper  {
-    margin-left: 0px ;
+    .sidebar-open .page-wrapper  {
+    margin-left: 60px ;
+
+}
 }
 
 @media only screen and (max-width: 767.98px) {
@@ -189,4 +197,4 @@ body {
         font-size: 0.875rem;
     }
 }
-  }
+  
